<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/MAIN_BUTTON_MARGIN"
    android:orientation="vertical" >

    <Button
        android:id="@+id/showPickerButton01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/SHOW_MDPICKER_BTN01" />

    <Button
        android:id="@+id/showPickerButton02"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/SHOW_MDPICKER_BTN02" />

    <Button
        android:id="@+id/showPickerButton03"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/SHOW_MDPICKER_BTN03" />

</LinearLayout>
